--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2020-08-14
+  Minor Changes:
+    - Factorio 1.0!
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2020-04-19
   Features:
