Update to 2.0, add disabled description

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.3
+Date: 2024-10-31
+  Minor Changes:
+    - Updated to Factorio 2.0
+    - Add description to disabled nightvision equipment
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2020-11-29
   Minor Changes:
